--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "ttl"
 version = "0.11.3"
 edition = "2024"
+rust-version = "1.85"
 description = "Modern traceroute/mtr-style TUI with hop stats and optional ASN/geo enrichment"
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/lance0/ttl"
